--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-dom": "^18.2.0",
     "react-i18next": "^12.3.1",
     "react-tsparticles": "^2.9.3",
+    "swiper": "^11.2.6",
     "tsparticles": "^2.9.3"
   },
   "devDependencies": {
