--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@formspree/react": "^3.0.0",
     "i18next": "^22.5.0",
     "particles": "^0.3.1",
     "react": "^18.2.0",
